--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@ h1{
     font-size: 50px;
     
 }
+#text{
+    margin: 15px;
+}
 .link-button{
     
     text-decoration: none;
     background-image: linear-gradient(orange,tomato);
     color: white;
     font-weight: 400;
-    padding: 10px 10px;
+    padding: 5px 10px;
     border-radius: 5px; 
     cursor: pointer;
 }
@@ -35,6 +38,8 @@ h1{
 }
 .donate-today{
     text-align: center;
+    padding: 20px;
+    margin: 10px;
     
 }
 .col{
