--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ input[type=text] {
 .half-width{
     
     width: 60%;
-    
+    padding: 5px;
     margin: 20px ;
     background-color: #FFEEEE;
 }
@@ -121,6 +121,7 @@ input[type=text] {
 }
 .updates{
     text-align: center;
+    margin: 50px;
 }
 .registerbtn {
     border-radius: 5px;
